--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "npx eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
