--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "styled-components": "^5.3.6"
+    "scheduler": "^0.23.0",
+    "styled-components": "^5.3.6",
+    "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
