--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.1.1",
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "scheduler": "^0.23.0",
