--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-loading-skeleton": "^3.1.1",
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.1",
     "scheduler": "^0.23.0",
     "styled-components": "^5.3.6",
     "use-context-selector": "^1.4.1"
