--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "lint:fix": "npx eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "axios": "^1.3.3",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-loading-skeleton": "^3.1.1",
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
     "scheduler": "^0.23.0",
     "styled-components": "^5.3.6",
-    "use-context-selector": "^1.4.1"
+    "use-context-selector": "^1.4.1",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
